<resources>
    <string name="app_name">TourGASS</string>
    <string name="app_name_ch">掌上导游APP</string>

    <!-- activity_login -->
    <string name="account">账号：</string>
    <string name="import_account">请输入账号</string>
    <string name="password">密码：</string>
    <string name="import_password">请输入密码</string>
    <string name="auto_login">记住密码</string>
    <string name="login">登录</string>

    <!--提示信息-->
    <string name="message_login">请重新检查您的输入</string>
</resources>
