<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#eaf8ff"
              android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp" >

        <ImageView
            android:id="@+id/ivsetting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingRight="10dip"
            android:visibility="gone"
            android:src="@drawable/mb_setting_focus" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_ch"
            android:textColor="@color/blue"
            android:textSize="30dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:background="#89dafd" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text=""
            android:textColor="@color/green"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eaf8ff"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/account_ll"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@color/login_gray"
            android:orientation="horizontal"
            android:padding="3dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:paddingBottom="10dip"
                android:paddingLeft="10dip"
                android:paddingTop="10dip"
                android:text="@string/account"
                android:textColor="@color/txt_gray"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/account_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/import_account"
                android:maxLength="16"
                android:paddingBottom="10dip"
                android:paddingRight="10dip"
                android:paddingTop="10dip"
                android:text="15007090238" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_ll"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@color/login_gray"
            android:orientation="horizontal"
            android:padding="3dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:paddingBottom="10dip"
                android:paddingLeft="10dip"
                android:paddingTop="10dip"
                android:text="@string/password"
                android:textColor="@color/txt_gray"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/import_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingBottom="10dip"
                android:paddingRight="10dip"
                android:paddingTop="10dip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="#eaf8ff"
            android:orientation="horizontal"
            android:padding="3dip" >

            <CheckBox
                android:id="@+id/autologin_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/checkbox"
                android:button="@null"
                android:checked="false"
                android:textColor="@color/txt_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/auto_login"
                android:textColor="@color/txt_gray"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="55dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:background="@color/selector_button"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>